# VectorSight

./: .gitignore  CLAUDE.md  README.md  dev.sh  enrichment_braille_test.txt  openapi_temp.json  pipeline-explained.md  response_haiku.txt  response_sonnet.txt  svg_anonymizer.py  test.py  unknown.txt
backend/: .env.example  Dockerfile  enrichment_faker_v10.txt  enrichment_faker_v8.txt  enrichment_flink_v10.txt  enrichment_flink_v11.txt  enrichment_flink_v12.txt  enrichment_flink_v8.txt  enrichment_flink_v9.txt  enrichment_output.txt  enrichment_settings.txt  enrichment_smiley.txt  faker_enrichment.txt  flink_haiku_v3.txt  flink_sonnet_chat_v3.txt  flink_sonnet_v3.txt  flink_sonnet_v4.txt  flink_sonnet_v5.txt  flink_v2.txt  flink_v3.txt  flink_v5.txt  flink_v6.txt  flink_v7.txt  generate_pipeline_poster.py  pixel_seg_results.txt  primary_grid.txt  pyproject.toml  test_pixel_seg.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: analyze.py  chat.py  create.py  feedback.py  health.py  icon_set.py  modify.py  playground.py  router.py
backend/app/engine/: __init__.py  config.py  context.py  interpreter.py  pipeline.py  pixel_segmentation.py  registry.py  spatial_constants.py
backend/app/learning/: __init__.py  memory.py  seed_patterns.json  self_reflect.py  spatial_reference.md  tag_rules.md  tags.py
backend/app/llm/: client.py  enrichment_formatter.py  model_router.py  prompts.py  stream.py
backend/app/models/: edit_ops.py  enrichment.py  intent.py  requests.py  responses.py  svg_document.py
backend/tests/: conftest.py
docs/: README.md  (+8 more)
(+161 files in other folders)
